@@ -11,6 +11,7 @@ following names for their contribution to the product.
 * Daniel Friesen
 * Greg Sabino Mullane
 * Hojjat
+* Leon Weber
 * Mohamed Magdy
 * Raimond Spekking
 * Roan Kattouw
@@ -20,8 +21,9 @@ following names for their contribution to the product.
 * Tim Starling
 
 == Patch Contributors ==
-* RememberTheDot
+* Daniel Arnold
 * Max Semenik
+* RememberTheDot
 
 == Translators ==
 * Anders Wegge Jakobsen
